fix x overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow-x: 0;
+  overflow-x: hidden;
 }
 
 main {
